--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 Web-site coming soon.<br/><br/>
-ModelarData
-Fiskerivej 2k, 1.
-8000 Aarhus C
+ModelarData<br/>
+Fiskerivej 2k, 1.<br/>
+8000 Aarhus C<br/>
 E-mail: hello@modelardata.com
