New tmp web-site

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         Next-generation timeseries database
                     </h1>
                     <h2 class="subtitle is-5 has-text-white">
-                        ModelarData builds a novel approach to time series databases that drastically improving performance and cost.<br />
+                        At ModelarData , we apply state-of-the-art research to improve data transfer and data analytics in IoT. We are developing an enterprise-ready product that can be integrated into existing IoT infrastructures and provide faster analytics with higher more detailed datasets.<br />
                     </h2>
                     
                     <h1 class="title is-size-7-mobile is-1 has-text-white"><br /><br /></h1>
