New tmp web-site

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         Next-generation timeseries database
                     </h1>
                     <h2 class="subtitle is-5 has-text-white">
-                        At ModelarData , we apply state-of-the-art research to improve data transfer and data analytics in IoT. We are developing an enterprise-ready product that can be integrated into existing IoT infrastructures and provide faster analytics with higher more detailed datasets.<br />
+                        ModelarData builds a novel approach to time series databases that drastically improving performance and cost.<br />
                     </h2>
                     
                     <h1 class="title is-size-7-mobile is-1 has-text-white"><br /><br /></h1>
@@ -67,7 +67,7 @@
                     <div class="ls-section-content has-text-centered">
                         <h3 class="title has-text-dark">What is ModelarData?</h3>
                         <p class="content has-text-dark is-size-5">
-                            ModelarData builds a novel timeseries database that employs a model-based approach.<br />
+                            At ModelarData , we apply state-of-the-art research to improve data transfer and data analytics in IoT. We are developing an enterprise-ready product that can be integrated into existing IoT infrastructures and provide faster analytics with higher more detailed datasets.<br />
                         </p>
                     </div>
                 </div>
