New tmp web-site

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="ls-section-content has-text-centered">
                         <h3 class="title has-text-dark">What is ModelarData?</h3>
                         <p class="content has-text-dark is-size-5">
-                            At ModelarData , we apply state-of-the-art research to improve data transfer and data analytics in IoT. We are developing an enterprise-ready product that can be integrated into existing IoT infrastructures and provide faster analytics with higher more detailed datasets.<br />
+                            At ModelarData , we apply state-of-the-art research to improve data transfer and data analytics in IoT. We are developing an enterprise-ready timeseries database that can be integrated into existing IoT infrastructures and provide faster analytics with more detailed datasets.<br />
                         </p>
                     </div>
                 </div>
