Comment out newsletter section

--- a/index.html
+++ b/index.html
@@ -140,26 +140,26 @@
       </div>
     </section>
 
-    <section class="section ls-rainbow-gradient" id="requestaccess">
-      <div class="container">
-	<div class="columns">
-	  <div class="column is-4">
-	    <h3 class="title ls-half-space has-text-white is-3 has-text-bold">Let's Keep in Touch</h3>
-	    <p class="has-text-white">Enter your email and we'll let you know when there's news.</p>
-	  </div>
-	  <div class="column is-5 is-offset-2">
-	    <div class="field ls-round-input has-background-white">
-	      <form action="https://columno.us3.list-manage.com/subscribe/post?u=d05306ee2445e5897986ba8ff&amp;id=8d563f0708" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-		<input class="input has-text-grey" type="text" name="EMAIL" placeholder="Enter Your Email">
-		<button type="submit" class="button is-success">
-		  Get news
-		</button>
-	      </form>
-	    </div>
-	  </div>
-	</div>
-      </div>
-    </section>
+<!--    <section class="section ls-rainbow-gradient" id="requestaccess">-->
+<!--      <div class="container">-->
+<!--	<div class="columns">-->
+<!--	  <div class="column is-4">-->
+<!--	    <h3 class="title ls-half-space has-text-white is-3 has-text-bold">Let's Keep in Touch</h3>-->
+<!--	    <p class="has-text-white">Enter your email and we'll let you know when there's news.</p>-->
+<!--	  </div>-->
+<!--	  <div class="column is-5 is-offset-2">-->
+<!--	    <div class="field ls-round-input has-background-white">-->
+<!--	      <form action="https://columno.us3.list-manage.com/subscribe/post?u=d05306ee2445e5897986ba8ff&amp;id=8d563f0708" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>-->
+<!--		<input class="input has-text-grey" type="text" name="EMAIL" placeholder="Enter Your Email">-->
+<!--		<button type="submit" class="button is-success">-->
+<!--		  Get news-->
+<!--		</button>-->
+<!--	      </form>-->
+<!--	    </div>-->
+<!--	  </div>-->
+<!--	</div>-->
+<!--      </div>-->
+<!--    </section>-->
 
     <footer class="footer  has-background-primary">
       <div class="container">
