--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -117,7 +117,7 @@
 	<div class="columns">
 	  <div class="column is-6">
 	    <div class="mapouter">
-	      <div class="gmap_canvas"><iframe class="gmap_canvas" src="https://maps.google.com/maps?q=Højbro%20Plads%2010&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
+	      <div class="gmap_canvas"><iframe class="gmap_canvas" src="https://maps.google.com/maps?q=Højbro%20Plads%2010,%20Copenhagen&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
 	    </div>
 	  </div>
 	  <div class="column is-6 ls-info-contact">
@@ -133,7 +133,7 @@
 	    <div class="media ls-item-contact">
 	      ModelarData<br />
 	      Højbro Plads 10<br />
-	      1200 København K
+	      1200 Copenhagen K
 	    </div>
 	  </div>
 	</div>
